--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".app.ServerTestActivity">
+        <activity android:name=".app.ServerTestActivity" />
+        <activity android:name=".app.ApiKeyActivity" />
+        <activity android:name=".app.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".app.ApiKeyActivity" />
+        <activity android:name=".app.SignUpActivity"></activity>
     </application>
 
 </manifest>
