--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     // <<< ADDED >>>
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.retrofit2:converter-jackson:2.3.0'
     // Logging in Retrofit
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
