Add menu buttons to DashboardActivity, LoginActivity & SignUpActivity
Create menu buttons to Log Out from Dashboard, Sign Up from Login and
Login from Sign Up. This frees up real estate for the user's screen.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:value="@string/google_maps_key" />
         <activity android:name=".app.ServerTestActivity" />
         <activity android:name=".app.ApiKeyActivity" />
-        <activity android:name=".app.MapsActivity"></activity>
+        <activity android:name=".app.MapsActivity" />
         <activity android:name=".app.LoginActivity">
 
             <!--
