--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,36 +19,14 @@
         <activity android:name=".app.ApiKeyActivity" />
         <activity android:name=".app.MapsActivity" />
         <activity android:name=".app.LoginActivity">
-
-            <!--
-        </activity>
-        <activity android:name=".app.ServerTestActivity" >
-            -->
-            <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
-            -->
-
-
-            <!--
-            <activity
-            android:name=".app.MapsActivity"
-            android:label="@string/title_activity_maps">
-            -->
-
-        </activity>
-        <activity android:name=".app.SignUpActivity" />
-        <activity android:name=".app.DashboardActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".app.SignUpActivity" />
+        <activity android:name=".app.DashboardActivity" />
     </application>
 
 </manifest>
