--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
@@ -23,7 +24,13 @@
         <activity android:name=".app.SignUpActivity" />
         <activity android:name=".app.ManageMonitoring" />
         <activity android:name=".app.DashboardActivity" />
-        <activity android:name=".app.AddMonitoringActivity"></activity>
+        <activity android:name=".app.AddMonitoringActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
