--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,17 +20,17 @@
         <activity android:name=".app.ServerTestActivity" />
         <activity android:name=".app.ApiKeyActivity" />
         <activity android:name=".app.MapsActivity" />
-        <activity android:name=".app.LoginActivity" />
-        <activity android:name=".app.SignUpActivity" />
-        <activity android:name=".app.ManageMonitoring" />
-        <activity android:name=".app.DashboardActivity" />
-        <activity android:name=".app.AddMonitoringActivity">
+        <activity android:name=".app.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".app.SignUpActivity" />
+        <activity android:name=".app.ManageMonitoring" />
+        <activity android:name=".app.DashboardActivity" />
+        <activity android:name=".app.AddMonitoringActivity"></activity>
     </application>
 
 </manifest>
