--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity android:name=".app.SignUpActivity" />
         <activity android:name=".app.ManageMonitoring" />
         <activity android:name=".app.DashboardActivity" />
-        <activity android:name=".app.AddMonitoringActivity">
+        <activity android:name=".app.AddMonitoringActivity" />
+        <activity android:name=".app.CreateGroup">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
