--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
@@ -30,7 +29,8 @@
         <activity android:name=".app.SignUpActivity" />
         <activity android:name=".app.ManageMonitoring" />
         <activity android:name=".app.DashboardActivity" />
-        <activity android:name=".app.AddMonitoringActivity"></activity>
+        <activity android:name=".app.AddMonitoringActivity" />
+        <activity android:name=".app.MonitoringUsersActivity"></activity>
     </application>
 
 </manifest>
