--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,10 +30,11 @@
         <activity android:name=".app.ManageMonitoring" />
         <activity android:name=".app.DashboardActivity" />
         <activity android:name=".app.AddMonitoringActivity" />
-        <activity android:name=".app.MonitoringUsersActivity"></activity>
+        <activity android:name=".app.MonitoringUsersActivity" />
         <activity android:name=".app.AddMonitoringActivity" />
         <activity android:name=".app.ManageGroups" />
         <activity android:name=".app.CreateGroup" />
+        <activity android:name=".app.AddMonitoredActivity"></activity>
     </application>
 
 </manifest>
