Implement large portion of Group Details Activity
Implement large part of Group Details Activity. Still fairly buggy,
and we do not have deletion capabilities yet.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,10 +31,10 @@
         <activity android:name=".app.DashboardActivity" />
         <activity android:name=".app.AddMonitoringActivity" />
         <activity android:name=".app.MonitoringUsersActivity" />
-        <activity android:name=".app.AddMonitoringActivity" />
         <activity android:name=".app.ManageGroups" />
         <activity android:name=".app.CreateGroup" />
-        <activity android:name=".app.AddMonitoredActivity"></activity>
+        <activity android:name=".app.AddMonitoredActivity" />
+        <activity android:name=".app.GroupDetailsActivity" />
     </application>
 
 </manifest>
