Set up account info activity.
However, there are issues with retrieving the optional information
back from the server. Will look into this later.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".app.CreateGroup" />
         <activity android:name=".app.AddMonitoredActivity" />
         <activity android:name=".app.GroupDetailsActivity" />
+        <activity android:name=".app.AccountInfoActivity"></activity>
     </application>
 
 </manifest>
