Fix bug with layout
The layout had a minor bug that I fixed before pushing.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
         <activity android:name=".app.CreateGroup" />
         <activity android:name=".app.AddMonitoredActivity" />
         <activity android:name=".app.GroupDetailsActivity" />
-        <activity android:name=".app.AccountInfoActivity"></activity>
+        <activity android:name=".app.AccountInfoActivity" />
+        <activity android:name=".app.UserInfoActivity"></activity>
     </application>
 
 </manifest>
