Added ability to edit information for monitored users.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
@@ -49,6 +48,7 @@
         <activity android:name=".app.ManageMessagesActivity" />
         <activity android:name=".app.ParentDashboardActivity" />
         <activity android:name=".app.GroupedMessagesActivity" />
+        <activity android:name=".app.MonitoringInfoActivity"></activity>
     </application>
 
 </manifest>
