--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
@@ -44,8 +43,7 @@
         <activity android:name=".app.UserInfoActivity" />
         <activity
             android:name=".app.ParentDashboardActivity"
-            android:label="@string/title_activity_parent_maps"></activity>
-        <activity android:name=".app.MonitoredUserActivity" />
+            android:label="@string/title_activity_parent_maps" />
         <activity android:name=".app.ManageMessagesActivity" />
         <activity android:name=".app.GroupedMessagesActivity" />
     </application>
