--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <service
             android:name=".GPSJobService"
             android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service android:name=".UpdateMessages" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -46,7 +47,7 @@
             android:label="@string/title_activity_parent_maps" />
         <activity android:name=".app.ManageMessagesActivity" />
         <activity android:name=".app.GroupedMessagesActivity" />
-        <activity android:name=".app.MonitoringInfoActivity"></activity>
+        <activity android:name=".app.MonitoringInfoActivity" />
     </application>
 
 </manifest>
