Leaderboard layout created

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,8 @@
         <activity android:name=".app.ManageMessagesActivity" />
         <activity android:name=".app.GroupedMessagesActivity" />
         <activity android:name=".app.MonitoringInfoActivity" />
-        <activity android:name=".app.PermissionActivity"></activity>
+        <activity android:name=".app.PermissionActivity" />
+        <activity android:name=".app.LeaderboardActivity"></activity>
     </application>
 
 </manifest>
